
Package: PSCBS
==============

Version: 0.21.0 [2012-02-27]
o Added renameChromosomes() to AbstractCBS.


Version: 0.20.0 [2012-02-26]
o Added alpha version of callGainNeutralLoss() for PairedPSCBS,
  which certainly will be updated in the future.  This caller
  is tested by the system tests.
o Added dropChangePoints() for AbstractCBS.
o Added some internal utility functions for PairedPSCBS taken
  from the aroma.cn package.  Some of these may become public
  later, but for they should be considered internal.
o ROBUSTNESS: Added more sanity checks validating the correctness 
  of what is returned by extractSegments() for CBS and PairedPSCBS.
o BUG FIX: extractSegments() for PairedPSCBS would return incorrect
  row indices, more precisely, overlapping data chunks.
o BUG FIX: bootstrapTCNandDHByRegion() for PairedPSCBS would resample
  from a subset of the intended TCNs, iff the DH mean was non-finite
  while there were still heterozygous SNPs.  This introduced a bias in
  the estimates, which was neglectable for large segments, but for very
  small segments (a few loci) it could be relatively large.


Version: 0.19.8 [2012-02-23]
o ROBUSTNESS: Package now explicitly depends on 'utils'.


Version: 0.19.7 [2012-02-22]
o BUG FIX: findLargeGaps() did not handle missing values for
  argument 'chromosome'.
o BUG FIX: segmentByCBS(..., knownSegments=knownSegments) would
  incorrectly throw a sanity-check exception if 'knownSegments'
  contains a segment with 'start' and 'stop' positions being equal.
o BUG FIX: Argument 'calls' of plotTracks() for PairedPSCBS was ignored
  if more than one chromosome was plotted.


Version: 0.19.6 [2012-01-24]
o ROBUSTNESS: Now getCallStatistics() for CBS asserts that calls have
  been made.  If not, an exception is thrown.


Version: 0.19.5 [2012-01-21]
o DOCUMENTATION: Added details to the help of callLOH() and callAB() on
  the difference between (AB,LOH)=(TRUE,FALSE) and (AB,LOH)=(TRUE,NA).