@@ -3,6 +3,7 @@ Package: PSCBS
 ==============
 
 Version: 0.21.0 [2012-02-27]
+o Added argument 'fields' to getLocusData() for PairedPSCBS.
 o Added renameChromosomes() to AbstractCBS.
 
 
